--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.7",
     "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-day-picker": "8.10.1",
@@ -20,7 +21,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
   }
 }
